--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-{% extends "base.html" %}
-{% load static %}
-
-{% block title %}
-Blog
-{% endblock title%}
-
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <h1 class="text-5xl font-bold text-center mb-4">Mi Blog</h1>
-<p class="text-center text-gray-800 dark:text-gray-300 mb-6">Contenido de la página del blog.</p>
+<p class="text-center text-gray-800 dark:text-gray-300 mb-6">
+  Contenido de la página del blog.
+</p>
 <div class="flex justify-center space-x-4">
-    <button class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition">Nuevo Post</button>
-    <button class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600 transition">Editar</button>
-    <button class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition">Borrar</button>
+  <button
+    class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600 transition"
+  >
+    Nuevo Post
+  </button>
+  <button
+    class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600 transition"
+  >
+    Editar
+  </button>
+  <button
+    class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition"
+  >
+    Borrar
+  </button>
 </div>
 <h2 class="mt-6 text-2xl font-semibold">Últimas personas añadidas:</h2>
 <ul>
-    {% for person in visitas %}
-    <a href="{% url 'usuarios:personasLista' slug=person.slug %}">
-        <li>{{ person.name }}</li>
-    </a>
+  {% for person in visitas %}
+  <a href="{% url 'blog:personasLista' slug=person.slug %}">
+    <li>{{ person.name }}</li>
+  </a>
 
-    {% empty %}
-    <li>No hay personas todavía.</li>
-    {% endfor %}
+  {% empty %}
+  <li>No hay personas todavía.</li>
+  {% endfor %}
 </ul>
 {% endblock content %}
