--- a/blog/templates/blog/personas.html
+++ b/blog/templates/blog/personas.html
@@ -22,7 +22,7 @@
 
   <button class="text-blue-500 hover:underline">
     <a
-      href="{% url 'usuarios:blogpage' %}"
+      href="{% url 'blog:blogpage' %}"
       class="text-white px-3 py-2 rounded hover:bg-blue-700 dark:hover:bg-blue-600 transition"
       >Volver</a
     >
