--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -15,7 +15,7 @@
         >Home</a
       >
       <a
-        href="{% url 'usuarios:blogpage' %}"
+        href="{% url 'blog:blogpage' %}"
         class="text-white px-3 py-2 rounded hover:bg-blue-700 dark:hover:bg-blue-600 transition"
         >Blog</a
       >
@@ -24,7 +24,17 @@
         class="text-white px-3 py-2 rounded hover:bg-blue-700 dark:hover:bg-blue-600 transition"
         >Register</a
       >
-      {% if request.user.is.authenticated%}
+      <a
+        href="{% url 'users:login' %}"
+        class="text-white px-3 py-2 rounded hover:bg-blue-700 dark:hover:bg-blue-600 transition"
+        >Login</a
+      >
+      {% if user.is_authenticated %}
+      <form action="{% url 'users:logout' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
+      {% endif %}
     </nav>
 
     <main class="p-8">
