--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -10,5 +10,13 @@
       {% csrf_token %} {{ form }}
       <button type="submit">Enviar</button>
     </form>
+
+    <button class="text-blue-500 hover:underline">
+      <a
+        href="{% url 'home' %}"
+        class="text-white px-3 py-2 rounded hover:bg-blue-700 dark:hover:bg-blue-600 transition"
+        >Volver</a
+      >
+    </button>
   </body>
 </html>
