--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -44,6 +44,12 @@
         class="text-white px-3 py-2 rounded hover:bg-blue-700 dark:hover:bg-blue-600 transition"
         >Productos</a
       >
+      {% endif %} {% if user.is_authenticated %}
+      <a
+        href="{% url 'games:game_list' %}"
+        class="text-white px-3 py-2 rounded hover:bg-blue-700 dark:hover:bg-blue-600 transition"
+        >Juegos</a
+      >
       {% endif %}
     </nav>
 
